# wild

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
data_bot/: cli.py
data_bot/lib/: __init__.py  db.py  job.py
data_bot/retr/: __init__.py  download_month.py  geocode_retr.py  parcel_prefix_format.py  sync_retr.py  utils.py
data_bot/retr/parcel_prefix_format/: __init__.py  parcel_prefix_format.py  parsers.py  transformers.py
queries/: addresses_to_geocode.sql
schema/: sqitch.conf  sqitch.plan
schema/deploy/: 1-create-schema-wild.sql  2-create-roles-and-permissions.sql  3-create-tables-retr.sql  4-create-table-retr-municipality-parcel-format.sql
schema/revert/: 1-create-schema-fmc.sql  1-create-schema-wild.sql  2-create-roles-and-permissions.sql  3-create-tables-retr.sql  4-create-table-retr-municipality-parcel-format.sql
schema/verify/: 1-create-schema-wild.sql  2-create-roles-and-permissions.sql  3-create-tables-retr.sql  4-create-table-retr-municipality-parcel-format.sql
scripts/: cli.py  database.py  db.py  lib.py  queries.py  retr.py
scripts/lib/: __init__.py  cli.py  db.py  job.py
scripts/retr/: __init__.py  sync_retr.py  utils.py
src/: sqitch.plan
src/deploy/: 1-create-schema-fmc.sql  3-create-tables-retr.sql  appschema.sql
src/revert/: 2-create-roles-and-permissions.sql  appschema.sql
src/verify/: 1-create-schema-fmc.sql  2-create-roles-and-permissions.sql  3-create-tables-retr.sql  appschema.sql
