[tool.poetry]
name = "WILD"
version = "0.1.0"
description = "WI Landlord Database"
authors = ["jacoacoacob <jacoacoacob@protonmail.com>"]
readme = "README.md"
packages = [
  { include = "data_bot" }
]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
requests = "^2.28.1"
psycopg2 = "^2.9.5"
click = "^8.1.3"

[tool.poetry.scripts]
"cli" = "data_bot.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
